--- a/patientInfo/src/main/resources/application.properties
+++ b/patientInfo/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=mediscreen-patientInfo
 
 #MySQL configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/paymybuddy?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/mediscreen?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1CptaMySQL?
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
