--- a/patientInfo/src/main/resources/application.properties
+++ b/patientInfo/src/main/resources/application.properties
@@ -18,3 +18,5 @@ logging.level.root=ERROR
 logging.level.fr.marc=INFO
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 
+#To given information to Swagger
+#spring.mvc.pathmatch.matching-strategy=ant-path-matcher
