--- a/patientNote/src/main/resources/application.properties
+++ b/patientNote/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#Global configuration
+spring.application.name=mediscreen-patientNote
+
+#MongoDB configuration
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=mediscreen
 
