Sprint2 notes view done

--- a/patientNote/src/main/resources/application.properties
+++ b/patientNote/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=mediscreen
 
+#Tomcat configuration
+server.port=8082
+
+#Log level configuration
+logging.level.root=ERROR
+logging.level.fr.marc=INFO
+logging.level.org.springframework.boot.web.embedded.tomcat=INFO
