--- a/patientInfo/pom.xml
+++ b/patientInfo/pom.xml
@@ -48,6 +48,13 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.1.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin 
+		<dependency>
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
+			<version>0.8.9</version>
+		</dependency>
+		-->
 
 	</dependencies>
 
@@ -65,24 +72,41 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<!-- Test Surefire -->
+			<!-- Test Surefire <plugin> <groupId>org.apache.maven.plugins</groupId> 
+				<artifactId>maven-surefire-plugin</artifactId> <configuration> <argLine>-Xmx1024m</argLine> 
+				<useSystemClassLoader>false</useSystemClassLoader> <includes> <include>**/*Test.java</include> 
+				</includes> <testFailureIgnore>true</testFailureIgnore> <forkCount>0</forkCount> 
+				<reuseForks>true</reuseForks> <workingDirectory>${project.build.directory}</workingDirectory> 
+				<redirectTestOutputToFile>true</redirectTestOutputToFile> <runOrder>alphabetical</runOrder> 
+				</configuration> </plugin> -->
+
+			<!-- Jacoco plugin -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.8</version>
+				<executions>
+					<execution>
+						<id>jacoco-initialize</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-site</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
-					<argLine>-Xmx1024m</argLine>
-					<useSystemClassLoader>false</useSystemClassLoader>
-					<includes>
-						<include>**/*Test.java</include>
-					</includes>
-					<testFailureIgnore>true</testFailureIgnore>
-					<forkCount>0</forkCount>
-					<reuseForks>true</reuseForks>
-					<workingDirectory>${project.build.directory}</workingDirectory>
-					<redirectTestOutputToFile>true</redirectTestOutputToFile>
-					<runOrder>alphabetical</runOrder>
+					<excludes>
+						<exclude>fr/marc/patientInfo/model/*</exclude>
+					</excludes>
 				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
 
