--- a/patientNote/pom.xml
+++ b/patientNote/pom.xml
@@ -67,22 +67,30 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<!-- Test Surefire -->
+			<!-- Jacoco plugin -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.8</version>
+				<executions>
+					<execution>
+						<id>jacoco-initialize</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-site</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
-					<argLine>-Xmx1024m</argLine>
-					<useSystemClassLoader>false</useSystemClassLoader>
-					<includes>
-						<include>**/*Test.java</include>
-					</includes>
-					<testFailureIgnore>true</testFailureIgnore>
-					<forkCount>0</forkCount>
-					<reuseForks>true</reuseForks>
-					<workingDirectory>${project.build.directory}</workingDirectory>
-					<redirectTestOutputToFile>true</redirectTestOutputToFile>
-					<runOrder>alphabetical</runOrder>
+					<excludes>
+						<exclude>fr/marc/patientNote/model/*</exclude>
+					</excludes>
 				</configuration>
 			</plugin>
 		</plugins>
