--- a/patientNote/src/main/resources/application.properties
+++ b/patientNote/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.application.name=mediscreen-patientNote
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=mediscreen
+spring.data.mongodb.uri=mongodb://mediscreen-mongodb:27017/mediscreen-docker
 
 #Tomcat configuration
 server.port=8082
