--- a/patientInfo/Dockerfile
+++ b/patientInfo/Dockerfile
@@ -1,9 +1,7 @@
 FROM openjdk:17-jdk-alpine
 
-WORKDIR /app
-
 COPY target/patientInfo-0.0.1-SNAPSHOT.jar .
 
 EXPOSE 8081
 
-CMD ["java", "-jar", "target/patientInfo-0.0.1-SNAPSHOT.jar"]
+CMD ["java", "-jar", "patientInfo-0.0.1-SNAPSHOT.jar"]
